<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:longClickable="false"
    android:orientation="vertical"
    tools:context=".activity.PointsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/points_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        <!--android:elevation="4dp"-->

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/points_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/scroll_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:longClickable="false"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/agent_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:paddingBottom="@dimen/layout_horizontal_padding"
                android:paddingEnd="@dimen/layout_padding_side_right"
                android:paddingLeft="@dimen/layout_padding_side_left"
                android:paddingRight="@dimen/layout_padding_side_right"
                android:paddingStart="@dimen/layout_padding_side_left"
                android:paddingTop="@dimen/layout_horizontal_padding">

                <ImageView
                    android:id="@+id/agent_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/image_margin_side"
                    android:layout_marginStart="@dimen/image_margin_side"
                    android:contentDescription="@string/agent_image_desc"
                    android:src="@drawable/ic_incognito_black_48dp"
                    android:tint="@color/colorIconTint" />

                <TextView
                    android:id="@+id/agent_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/text_margin_side"
                    android:layout_marginStart="@dimen/text_margin_side"
                    android:lines="2"
                    android:maxLines="2"
                    android:text="@string/agent_header"
                    android:textSize="16sp" />
            </LinearLayout>

            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/line_separator_height"-->
            <!--android:layout_marginLeft="@dimen/line_separator_margin_side"-->
            <!--android:layout_marginStart="@dimen/line_separator_margin_side"-->
            <!--android:background="@color/colorSeparator" />-->

            <LinearLayout
                android:id="@+id/stop_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:paddingBottom="@dimen/layout_horizontal_padding"
                android:paddingEnd="@dimen/layout_padding_side_right"
                android:paddingLeft="@dimen/layout_padding_side_left"
                android:paddingRight="@dimen/layout_padding_side_right"
                android:paddingStart="@dimen/layout_padding_side_left"
                android:paddingTop="@dimen/layout_horizontal_padding">

                <ImageView
                    android:id="@+id/stop_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/image_margin_side"
                    android:layout_marginStart="@dimen/image_margin_side"
                    android:contentDescription="@string/stop_image_desc"
                    android:src="@drawable/ic_timer_off_black_48dp"
                    android:tint="@color/colorIconTint" />

                <TextView
                    android:id="@+id/stop_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/text_margin_side"
                    android:layout_marginStart="@dimen/text_margin_side"
                    android:lines="2"
                    android:maxLines="2"
                    android:text="@string/stop_header"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/agent_stop_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:paddingBottom="@dimen/layout_horizontal_padding"
                android:paddingEnd="@dimen/layout_padding_side_right"
                android:paddingLeft="@dimen/layout_padding_side_left"
                android:paddingRight="@dimen/layout_padding_side_right"
                android:paddingStart="@dimen/layout_padding_side_left"
                android:paddingTop="@dimen/layout_horizontal_padding">

                <ImageView
                    android:id="@+id/agent_stop_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/image_margin_side"
                    android:layout_marginStart="@dimen/image_margin_side"
                    android:contentDescription="@string/agent_image_desc"
                    android:src="@drawable/ic_incognito_black_48dp"
                    android:tint="@color/colorIconTint" />

                <TextView
                    android:id="@+id/agent_stop_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/text_margin_side"
                    android:layout_marginStart="@dimen/text_margin_side"
                    android:lines="2"
                    android:maxLines="2"
                    android:text="@string/agent_stop_header"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/right_pick_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingBottom="@dimen/layout_horizontal_padding"
        android:paddingEnd="@dimen/layout_padding_side_right"
        android:paddingLeft="@dimen/layout_padding_side_left"
        android:paddingRight="@dimen/layout_padding_side_right"
        android:paddingStart="@dimen/layout_padding_side_left"
        android:paddingTop="@dimen/layout_horizontal_padding">

        <ImageView
            android:id="@+id/right_pick_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/image_margin_side"
            android:layout_marginStart="@dimen/image_margin_side"
            android:contentDescription="@string/agent_image_desc"
            android:src="@drawable/ic_assessment_black_48dp"
            android:tint="@color/colorIconTint" />

        <TextView
            android:id="@+id/right_pick_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/text_margin_side"
            android:layout_marginStart="@dimen/text_margin_side"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/right_pick_header"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--android:id="@+id/main_content"-->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/points_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

    </android.support.design.widget.CoordinatorLayout>



</LinearLayout>
