<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:longClickable="false"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        <!--android:elevation="4dp"-->

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/countdown_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingBottom="@dimen/layout_horizontal_padding"
        android:paddingEnd="@dimen/layout_padding_side_right"
        android:paddingLeft="@dimen/layout_padding_side_left"
        android:paddingRight="@dimen/layout_padding_side_right"
        android:paddingStart="@dimen/layout_padding_side_left"
        android:paddingTop="@dimen/layout_horizontal_padding">

        <ImageView
            android:id="@+id/countdown_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/image_margin_side"
            android:layout_marginStart="@dimen/image_margin_side"
            android:contentDescription="@string/countdown_image_desc"
            android:src="@drawable/ic_timer_black_48dp"
            android:tint="@color/colorIconTint" />

        <TextView
            android:id="@+id/countdown_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/text_margin_side"
            android:layout_marginStart="@dimen/text_margin_side"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/countdown_header"
            android:textSize="16sp" />
    </LinearLayout>

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/line_separator_height"-->
    <!--android:layout_marginLeft="@dimen/line_separator_margin_side"-->
    <!--android:layout_marginStart="@dimen/line_separator_margin_side"-->
    <!--android:background="@color/colorSeparator" />-->

    <TextView
        android:id="@+id/header_separator"
        style="?android:attr/listSeparatorTextViewStyle"

        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/header_user_list"
        android:textSize="16sp" />

    <!--android:textColor="@color/textGreyHeader"
        android:background="@android:color/transparent"-->

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--android:id="@+id/main_content"-->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/user_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add_white_24dp"
            app:layout_anchor="@id/user_recycler_view"
            app:layout_anchorGravity="bottom|right|end" />

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
